--- a/etape4/docker-compose.yml
+++ b/etape4/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:
   http:
     image: nginx:latest
-    container_name: HTTP_2
+    container_name: HTTP_4
     ports:
-      - "8080:80"  # Mappe le port 8080 de la machine hôte au port 80 du container
+      - "8080:80"
     volumes:
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf  # Configuration Nginx
+      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./src:/var/www/html  # Monté sur /var/www/html pour WordPress
     depends_on:
       - script
@@ -15,10 +15,10 @@ services:
       - webnet
 
   script:
-    image: php:7.4-fpm  # Utiliser l'image PHP avec FPM
+    image: php:7.4-fpm
     container_name: SCRIPT_2
     volumes:
-      - ./src:/var/www/html  # Monté sur /var/www/html pour WordPress
+      - ./src:/var/www/html
     depends_on:
       - data
     networks:
